# noteflow-v2

./: .gitignore  README.md  TESTING.md  pyproject.toml  requirements.txt  test_run.py
config/: watches.yaml  watches.yaml.example
core/: __init__.py
core/api/: __init__.py  server.py
core/engine/: __init__.py  context.py  executor.py  pipeline.py  router.py
core/models/: __init__.py  artifact.py  enums.py  job.py  step.py
core/plugins/: __init__.py  base.py  loader.py  registry.py
core/storage/: __init__.py  artifact_store.py  database.py  job_store.py
core/watchers/: __init__.py  config_loader.py  file_watcher.py  watch_config.py
data/input/: .gitkeep  example.txt.sample
data/processed/: .gitkeep
data/stats/: .gitkeep
docs/: ARCHITECTURE.md
plugins/example/: manifest.yaml  processor.py
plugins/text_echo/: __init__.py  manifest.yaml  processor.py
plugins/word_counter/: __init__.py  manifest.yaml  processor.py
tests/: __init__.py  test_models.py  test_pipeline.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  styles.css
ui/src-tauri/: tauri.conf.json
ui/src/api/: client.ts
ui/src/components/: Header.tsx  JobDetail.tsx  Sidebar.tsx
ui/src/hooks/: useJobs.ts  useWebSocket.ts
ui/src/types/: index.ts
